# em

./: .depcheckrc.json  .dockerignore  .editorconfig  .env  .env.development  .env.production  .env.test  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .gitmodules  .ncurc.js  .ncurc.json  .npmrc  .prettierignore  .prettierrc.json  .travis.yaml  .typedoc-plugin-external-module-name.cjs  .typedoc-plugin-external-module-name.js  .yarnrc.yml  App.js  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  ESLINT_V10_COMPATIBILITY_REPORT.md  LICENSE.md  README.md  app.json  babel-plugin-macros.config.js  babel.config.js  capacitor.config.ts  docker-compose.yml  eslint.config.js  firebase-config-example.json  firebase.json  index.html  jest.config.js  (+18 more)
.claude/: settings.local.json
.expo/: packager-info.json  settings.json
.github/: copilot-instructions.md  dependabot.yml  main.workflow
.history/: .eslintrc_20200315093459.json  .eslintrc_20200316080746.json  .gitignore_20200309155100  .gitignore_20200311113007  package-lock_20200317100813.json  package-lock_20200317100828.json  package_20200306165423.json  package_20200310182635.json  package_20200319180119.json
.hooks/: post-checkout  post-commit  post-merge  pre-push
.husky/: post-commit  pre-push
actions/: ActionTypes.js  ThoughtAction.js
android/: .gitignore  build.gradle  capacitor.settings.gradle  gradle.properties  settings.gradle  variables.gradle
docs/: Autohide.md  Browser-Selection.md  Commands.md  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+4398 files in other folders)
