[package]
name = "em"
version = "0.0.0"
description = "A beautiful, minimalistic note-taking app for personal sensemaking."
authors = ["Raine Revere <raine@cybersemics.org>"]
edition = "2021"
rust-version = "1.77.2"

# The library is what the desktop binary and (future) mobile targets share.
[lib]
name = "em_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release binaries.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
